fix element tabbing & scrollbar style

--- a/search.css
+++ b/search.css
@@ -40,6 +40,7 @@ body {
   height: 100%;
   gap: 2px;
   overflow-y: auto;
+  scrollbar-color: #80808f transparent;
 }
 
 .tab-display {
